--- a/.github/workflows/deploy-to-netlify.yml
+++ b/.github/workflows/deploy-to-netlify.yml
@@ -18,14 +18,8 @@ jobs:
           node-version: '16.x'
       - name: Install dependencies
         run: npm install
-      - name: Lint
-        run: npm run lint
-      - name: Unit tests
-        run: npm run test:ci
-      - name: E2E
-        run: npm run e2e:ci
       - name: Build app
-        run: npm run build:prod
+        run: npm run build
       - name: Inject slug/short variables
         uses: rlespinasse/github-slug-action@v2.x
       - name: Upload artifact
@@ -50,7 +44,7 @@ jobs:
         uses: nwtgck/actions-netlify@v1.1
         with:
           publish-dir: './build'
-          production-branch: master
+          production-branch: main
           github-token: ${{ secrets.GITHUB_TOKEN }}
           deploy-message: "Deploy from GitHub Actions"
           enable-pull-request-comment: true
